implement broker logic
