# apiserver/model_new_device_abp11.go
@@ -21,13 +21,13 @@ type NewDeviceAbp11 struct {
 	AssetTypeName string `json:"assetTypeName"`
 
 	// Configuration id to define the target Loriot.io. If empty all configs are used.
-	ConfigID *string `json:"configID,omitempty"`
+	ConfigID string `json:"configID,omitempty"`
 
 	// Title for the new device and asset
-	Title *string `json:"title,omitempty"`
+	Title string `json:"title,omitempty"`
 
 	// Description for the new device and asset
-	Description *string `json:"description,omitempty"`
+	Description string `json:"description,omitempty"`
 
 	NetID string `json:"netID,omitempty"`
 
@@ -39,9 +39,9 @@ type NewDeviceAbp11 struct {
 
 	AppSKey string `json:"appSKey,omitempty"`
 
-	NfcNtDwn string `json:"nfcNtDwn,omitempty"`
+	NfCntDwn string `json:"nfCntDwn,omitempty"`
 
-	AfcNtDwn string `json:"afcNtDwn,omitempty"`
+	AfCntDwn string `json:"afCntDwn,omitempty"`
 
 	FNwkSIntKey string `json:"fNwkSIntKey,omitempty"`
 
