# openapi.yaml
@@ -47,11 +47,6 @@ tags:
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/loriot-io-app
 
-  - name: Customization
-    description: Help to customize Eliona environment
-    externalDocs:
-      url: https://github.com/eliona-smart-building-assistant/loriot-io-app
-
 paths:
   /configs:
     get:
@@ -157,21 +152,13 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/DeviceAsset"
-    post:
+    put:
       tags:
         - Devices
-      summary: Creates a new LoRaWAN device
+      summary: Create or update a LoRaWAN device
       description:
-        Creates a new LoRaWAN device handled by the Loriot.io app.
-        This also creates an asset if one does not already exist.
-      operationId: postDevice
-      parameters:
-        - in: query
-          name: type
-          required: false
-          schema:
-            type: string
-            enum: [otaa10, otaa11, abp10, abp11]
+        Create or update a LoRaWAN device in Loriot.io, using different protocols like OTAA v1.0, OTAA v1.1, ABP v1.0, or ABP v1.1. This step also creates or updates a related asset in Eliona and connects them. Whether to add a new device or update an existing one in both Loriot.io and Eliona depends on if the device's unique EUI is already known. If the EUI is known, the device or asset gets updated. If not, a new one is created.
+      operationId: putDevice
       requestBody:
         content:
           application/json:
@@ -221,41 +208,6 @@ paths:
               schema:
                 type: object
 
-  /dashboard-templates/{dashboard-template-name}:
-    get:
-      tags:
-        - Customization
-      summary: Get a full dashboard template
-      description: Delivers a dashboard template which can assigned to users in Eliona
-      externalDocs:
-        description: The API to assign the dashboard to users in Eliona (see post /dashboards endpoint).
-        url: https://github.com/eliona-smart-building-assistant/eliona-api
-      operationId: getDashboardTemplateByName
-      parameters:
-        - name: dashboard-template-name
-          in: path
-          description: Name of the dashboard template
-          required: true
-          schema:
-            type: string
-            example: Template
-        - name: projectId
-          in: query
-          description: Define the project the dashboard should be
-          required: true
-          schema:
-            type: string
-            example: 99
-      responses:
-        "200":
-          description: Successfully returned dashboard template
-          content:
-            application/json:
-              schema:
-                $ref: "https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard"
-        "404":
-          description: Template name not found
-
 components:
   parameters:
     config-id:
@@ -302,13 +254,6 @@ components:
           description: Timeout in seconds
           default: 120
           nullable: true
-        assetFilter:
-          $ref: "#/components/schemas/AssetFilter"
-        active:
-          type: boolean
-          readOnly: true
-          description: Set to `true` by the app when running and to `false` when app is stopped
-          nullable: true
         projectIDs:
           type: array
           description: List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the KentixONE app.
@@ -354,13 +299,12 @@ components:
         assetID:
           type: integer
           description: corresponding asset ID
-          nullable: true
         latestStatusCode:
           type: integer
           description: Latest status code 201 created, 200 updated, 204 deleted
           nullable: true
-        changedAt:
-          description: Timestamp of the latest change action
+        modifiedAt:
+          description: Timestamp of the latest create, update or delete action
           format: date-time
           nullable: true
           type: string
@@ -375,27 +319,21 @@ components:
         devEUI:
           type: string
           description: Global ID in IEEE EUI64 address space that uniquely identifies the device
-          nullable: false
         appID:
           type: string
           description: Application hexadecimal (uppercase) ID for Loriot
-          nullable: false
         assetTypeName:
           type: string
           description: Name of the asset type to create corresponding asset in Eliona
-          nullable: false
         configID:
           type: string
           description: Configuration id to define the target Loriot.io. If empty all configs are used.
-          nullable: true
         title:
           type: string
           description: Title for the new device and asset
-          nullable: true
         description:
           type: string
           description: Description for the new device and asset
-          nullable: true
 
     NewDeviceOTAA10:
       allOf:
@@ -449,9 +387,9 @@ components:
               type: string
             appSKey:
               type: string
-            nfcNtDwn:
+            nfCntDwn:
               type: string
-            afcNtDwn:
+            afCntDwn:
               type: string
             fNwkSIntKey:
               type: string
@@ -459,23 +397,3 @@ components:
               type: string
             nwkSEncKey:
               type: string
-
-    AssetFilter:
-      type: array
-      description: Array of rules combined by logical OR
-      items:
-        type: array
-        description: Array of rules combined by logical AND
-        items:
-          $ref: "#/components/schemas/FilterRule"
-
-    FilterRule:
-      type: object
-      description: Asset selection rule. Possible parameters are defined in app's README file.
-      properties:
-        parameter:
-          type: string
-          example: "appID"
-        regex:
-          type: string
-          example: "^ABC.*$"
